Use `getFirst` instead of `get(0)` to get first element in list